--- a/package.json
+++ b/package.json
@@ -1,12 +1,26 @@
 {
-  "name": "webrtc-app",
+  "name": "video-chat-app",
   "version": "1.0.0",
+  "description": "A random and direct video chat application using WebRTC",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "webrtc",
+    "videochat",
+    "nodejs",
+    "socket.io"
+  ],
+  "author": "abdelilah",
+  "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.5.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
